Sistema multi-proveedor: identidad GTIN con checksum, matching anti-flanker, fusion revisada, optimizador de compra con minimos y guardia de margen